# RFP-Analyzer

./: .dockerignore  .env.example  .gitignore  CLAUDE (1).md  Dockerfile  Project_requirement.md  README.md  docker-compose.yml
backend/: alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_create_rfp_jobs.py  b2c3d4e5f6a7_add_ai_summary.py
backend/app/: __init__.py  celery_app.py  config.py  constants.py  database.py  main.py
backend/app/analysis/: effort_estimator.py  engine.py  llm_analyser.py  recommender.py  risk_analyser.py  summariser.py
backend/app/models/: __init__.py  rfp_document.py  rfp_document_content.py  rfp_job.py
backend/app/parsers/: __init__.py  base_parser.py  docx_parser.py  parser_factory.py  pdf_parser.py  txt_parser.py
backend/app/repositories/: rfp_job_repository.py  sync_rfp_job_repository.py
backend/app/routers/: rfp_jobs.py
backend/app/schemas/: rfp_job.py
backend/app/services/: rfp_job_service.py
backend/app/tasks/: analysis_task.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/api/: rfpClient.js
frontend/src/components/: FileUploadForm.jsx  JobDetail.jsx  JobList.jsx
frontend/src/styles/: main.css
